<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/icon_customers"
            android:title="@string/menu_customers" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/icon_services"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icon_about"
            android:title="@string/menu_about" />
    </group>

</menu>
