<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_Home"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardDailySpun"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:shape="ring"
                app:cardUseCompatPadding="true"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:text="@string/daily_spun_change" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/daily_spun_change" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardServiceEntry"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:clickable="true"
                android:shape="ring"
                app:cardUseCompatPadding="true"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:text="@string/service_entry" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/service_entry" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardScheduleWork"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:shape="ring"
                app:cardUseCompatPadding="true"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:text="@string/schedule_work" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/schedule_work" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardServiceLog"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:shape="ring"
                app:cardUseCompatPadding="true"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:text="@string/service_log" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/service_log" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:shape="ring"
            app:cardUseCompatPadding="true"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TODAY'S INLINE CHANGE"
                android:textSize="16dp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-EMPTY-"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:gravity="center"
                android:id="@+id/empty_inline"
                android:textStyle="bold"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:id="@+id/rv_inline_today"
                />

        </androidx.cardview.widget.CardView><androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:shape="ring"
            app:cardUseCompatPadding="true"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TODAY'S SPUN CHANGE"
                android:textSize="16dp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-EMPTY-"
            android:layout_gravity="center"
            android:textSize="16dp"
            android:gravity="center"
            android:id="@+id/empty_spun"
            android:textStyle="bold"
            />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:id="@+id/rv_spun_today"
                />


        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>